--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.align-center,
+.text-center {
+  text-align: center;
+}
+
+.images {
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  margin: 20px;
+  object-fit: cover;
+}
+
+.grid {
+  text-align: center;
+  justify-content: center;
+  margin-top: 20px;
+  width: calc(100% - 100px);
+  margin-left: 50px;
+}
+
+.text-red-500 {
+  color: red;
+}
+
+.grid {
+  display: grid;
+  align-self: center;
+}
+
+@media (min-width: 640px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+  }
+}
